# WALKER

./: README.md  constructor.ipynb  pyproject.toml  walker.py
src/walker/: __init__.py
src/walker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
