[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walker"
version = "0.1.0"
description = "Minimal affine-invariant ensemble MCMC sampler with transforms and a lightweight Bayesian interface."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Alpish Srivastava" }
]
dependencies = [
  "numpy>=1.20",
  "tqdm>=4.0"
]

[project.optional-dependencies]
progress = ["tqdm>=4.0"]
plots = ["matplotlib>=3.5", "getdist>=1.3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]